# dclaw-lease

./: .env.example  AGENTS.md  PLAN-v1.2.md  README.md  REVISED-PRD.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  models.py  routers.py
backend/tests/: test_main.py
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  use-cases.md
docs/reference/: api.md  architecture.md  index.md
docs/releases/: index.md
docs/troubleshooting/: common-issues.md  faq.md  index.md
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: Dashboard.tsx  Header.tsx
frontend/lib/: api.ts
helm/: Chart.yaml  values.yaml
helm/dclaw-lease/: Chart.yaml  values.yaml
helm/dclaw-lease/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
