[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dclaw-lease"
version = "1.0.0"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
